--- a/pages/index.css
+++ b/pages/index.css
@@ -34,7 +34,7 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__item/intro__item.css);
+/* @import url(../blocks/intro/__item/intro__item.css); */
 @import url(../blocks/intro/__item-text/intro__item-text.css);
 @import url(../blocks/intro/__item-name/intro__item-name.css);
 
@@ -51,7 +51,7 @@
 @import url(../blocks/places/__description/places__description.css);
 @import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/places/__url-heading/places__url-heading.css);
-@import url(../blocks/places/__website/places__website.css);
+/* @import url(../blocks/places/__website/places__website.css); */
 @import url(../blocks/places/__link/places__link.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__paragraphs/places__paragraphs.css);
@@ -67,8 +67,8 @@
 /* Footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__wrapper/footer__wrapper.css);
-@import url(../blocks/footer/__menu/footer__menu.css);
+/* @import url(../blocks/footer/__menu/footer__menu.css); */
 @import url(../blocks/footer/__menu-list/footer__menu-list.css);
-@import url(../blocks/footer/__menu-item/footer__menu-item.css);
+/* @import url(../blocks/footer/__menu-item/footer__menu-item.css); */
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
