--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,7 @@
   margin: 32px auto 0;
   padding: 0;
   max-width: 640px;
-  width: 100%;
+  /* width: 100%; */
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -16,11 +16,6 @@
     margin: 16px auto 0;
     font-size: 16px;
     line-height: 20px;
-  }
-}
-
-@media (max-width:390px) {
-  .lead__subtitle {
     padding: 0 16px 0;
   }
 }
