day 2. rev 1: fix some buggs. containers left

--- a/blocks/lead/__container/lead__container.css
+++ b/blocks/lead/__container/lead__container.css
@@ -1,4 +1,12 @@
 .lead__container {
+  box-sizing: border-box;
   max-width: 984px;
   margin: 0 auto;
+}
+
+@media (max-width:1097px) {
+  .lead__container {
+    max-width: 100%;
+    margin: 0;
+  }
 }
