--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,3 +13,11 @@
 .footer__link:hover {
   opacity: .8;
 }
+
+@media (max-width:670px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
+
