--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,31 @@
 .header {
-  padding-top: 28px;
+  /* padding-top: 28px; */
+  /* max-width: 1184px;
+  width: 100%; */
+  padding: 28px 0 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  max-width: 1184px;
+}
+
+@media (max-width:1297px) {
+  .header {
+    padding: 28px 48px 0;
+  }
+}
+
+@media (max-width:900px) {
+  .header {
+    padding: 28px 24px 0;
+  }
+}
+
+@media (max-width:450px) {
+  .header {
+    padding: 16px 16px 0;
+  }
 }
 
 @media (max-width: 450px) {
