--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,11 +11,18 @@
   color: #fff;
 }
 
-@media (max-width:799px) {
+@media (max-width:899px) {
   .lead__subtitle {
     margin: 16px auto 0;
+    /* font-size: 16px;
+    line-height: 20px; */
+    padding: 0 16px 0;
+  }
+}
+
+@media (max-width:700px) {
+  .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    padding: 0 16px 0;
   }
 }
