--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,7 @@
 .cover__subtitle {
   max-width: 360px;
-  margin: 32px auto 0;
+  margin: 0;
+  margin-top: 32px;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -8,11 +9,12 @@
   line-height: 1.22;
   text-align: center;
   color: #fff;
+  z-index: 2;
 }
 
 @media (max-width:700px) {
   .cover__subtitle {
-    margin: 16px auto 0;
+    margin-top: 16px;
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
