--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   max-width: 560px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 900;
@@ -8,6 +8,7 @@
   line-height: 1.06;
   text-align: center;
   color: #fff;
+  z-index: 2;
 }
 
 @media (max-width:670px) {
