--- a/blocks/grid/grid.css
+++ b/blocks/grid/grid.css
@@ -1,15 +1,42 @@
 .grid {
   padding-top: 92px;
+  max-width: 1184px;
+  display: grid;
+  gap: 16px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
 }
 
-@media (max-width:768px) {
+@media (max-width:1297px) {
   .grid {
-    padding-top: 88px;
+    padding: 92px 48px 0;
   }
 }
 
-@media (max-width:320px) {
+@media (max-width:1195px) {
   .grid {
-    padding-top: 64px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 14px;
+  }
+}
+
+@media (max-width:935px) {
+  .grid {
+    padding: 88px 24px 0;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 16px;
+  }
+}
+
+@media (max-width:725px) {
+  .grid {
+    padding: 64px 16px 0;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
   }
 }
