--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
   margin: 40px 0 0;
   padding: 0;
+  max-width: 690px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
