--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,15 +1,22 @@
 .intro {
   padding-top: 92px;
+  max-width: 984px;
 }
 
-@media (max-width:768px) {
+@media (max-width:1097px) {
   .intro {
-    padding-top: 88px;
+    padding: 88px 48px 0;
   }
 }
 
-@media (max-width:320px) {
+@media (max-width:900px) {
   .intro {
-    padding-top: 64px;
+    padding: 64px 24px 0;
+  }
+}
+
+@media (max-width:450px) {
+  .intro {
+    padding: 64px 16px 0;
   }
 }
