--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,16 @@
 .lead {
   padding-top: 56px;
+  max-width: 984px;
 }
 
 @media (max-width:1097px) {
   .lead {
-    /* padding-top: 48px; */
     padding: 48px 48px 0;
   }
 }
 
 @media (max-width:900px) {
   .lead {
-    /* padding-top: 48px; */
     padding: 48px 0 0;
   }
 }
