--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,24 +1,24 @@
-.places__image {
+.place__image {
   width: 460px;
   height: 460px;
 }
 
 @media (max-width:1024px) {
-  .places__image {
+  .place__image {
     width: 440px;
     height: 440px;
   }
 }
 
 @media (max-width:768px) {
-  .places__image {
+  .place__image {
     width: 340px;
     height: 340px;
   }
 }
 
 @media (max-width:680px) {
-  .places__image {
+  .place__image {
     width: 100%;
     height: 100%;
   }
