--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.places__link {
+.place__link {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -9,6 +9,6 @@
   opacity: 1;
 }
 
-.places__link:hover {
+.place__link:hover {
   opacity: .8;
 }
