--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__title {
+.place__title {
   margin: 0;
   padding: 0;
   max-width: 460px;
@@ -11,13 +11,13 @@
 }
 
 @media (max-width:1024px) {
-  .places__title {
+  .place__title {
     max-width: 440px;
   }
 }
 
 @media (max-width:768px) {
-  .places__title {
+  .place__title {
     max-width: 340px;
     font-size: 42px;
     line-height: 46px;
@@ -25,7 +25,7 @@
 }
 
 @media (max-width:390px) {
-  .places__title {
+  .place__title {
     max-width: 320px;
     font-size: 32px;
     line-height: 35px;
