--- a/pages/index.css
+++ b/pages/index.css
@@ -6,10 +6,6 @@
 
 @import url(../blocks/body/body.css);
 
-@import url(../blocks/container/container.css);
-@import url(../blocks/container/_size/container_size_small.css);
-@import url(../blocks/container/_size/container_size_big.css);
-
 /* Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header__container.css);
@@ -31,11 +27,9 @@
 /* Intro */
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__container/intro__container.css);
-@import url(../blocks/intro/__wrapper/intro__wrapper.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
-/* @import url(../blocks/intro/__item/intro__item.css); */
 @import url(../blocks/intro/__item-text/intro__item-text.css);
 @import url(../blocks/intro/__item-name/intro__item-name.css);
 
@@ -47,29 +41,26 @@
 /* Places */
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__container/places__container.css);
-@import url(../blocks/places/__place/places__place.css);
-@import url(../blocks/places/__heading/places__heading.css);
-@import url(../blocks/places/__description/places__description.css);
-@import url(../blocks/places/__title/places__title.css);
-@import url(../blocks/places/__url-heading/places__url-heading.css);
-/* @import url(../blocks/places/__website/places__website.css); */
-@import url(../blocks/places/__link/places__link.css);
-@import url(../blocks/places/__image/places__image.css);
-@import url(../blocks/places/__paragraphs/places__paragraphs.css);
-@import url(../blocks/places/__paragraph/places__paragraph.css);
+/* -------place---------- */
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__heading/place__heading.css);
+@import url(../blocks/place/__description/place__description.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
 
 /* Cover */
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__wrapper/cover__wrapper.css);
-@import url(../blocks/cover/__heading/cover__heading.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__wrapper/footer__wrapper.css);
-/* @import url(../blocks/footer/__menu/footer__menu.css); */
+@import url(../blocks/footer/__container/footer__container.css);
 @import url(../blocks/footer/__menu-list/footer__menu-list.css);
-/* @import url(../blocks/footer/__menu-item/footer__menu-item.css); */
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
