--- a/blocks/cover/__wrapper/cover__wrapper.css
+++ b/blocks/cover/__wrapper/cover__wrapper.css
@@ -1,6 +1,6 @@
 .cover__wrapper {
   position: relative;
-  margin: 0 auto 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,25 +20,13 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: #2a2a2f;
   opacity: .3;
 }
 
-@media (max-width:1024px) {
+@media (max-width:1184px) {
   .cover__wrapper {
-    min-height: 640px;
-  }
-}
-
-@media (max-width:768px) {
-  .cover__wrapper {
-    min-height: 480px;
-  }
-}
-
-@media (max-width:320px) {
-  .cover__wrapper {
-    min-height: 200px;
+    min-height: calc(100vw * 0.625);
   }
 }
