day 5: add header__language-link media

--- a/blocks/header/__language-link/header__language-link.css
+++ b/blocks/header/__language-link/header__language-link.css
@@ -13,3 +13,9 @@
 .header__language-link:hover {
   opacity: .8;
 }
+
+@media (max-width:450px) {
+  .header__language-link {
+    font-size: 20px;
+  }
+}
